--- a/tailwind-project/aa1.css
+++ b/tailwind-project/aa1.css
@@ -133,7 +133,7 @@ html {
 }
 
 body {
-  min-width: 1648px;
+  /* min-width: 1948px; */
   color: #ffffff;
   font-family: Poppins, sans-serif;
   font-size: 1.736111rem; /* 27.78px/16px = 1.73625rem */
@@ -162,7 +162,7 @@ header {
 }
 
 .banner {
-  height: 1080px;
+  /* height: 1080px; */
   margin: 0 auto;
   overflow: hidden;
   padding: 38px 0 256px;
@@ -178,7 +178,7 @@ header {
 .l-constrained-2 {
   margin: 0 auto;
   position: relative;
-  width: 1648px;
+  /* width: 1648px; */
   z-index: 0;
 }
 
